--- a/5-guia/ejercicios-5/ej-10-5.tex
+++ b/5-guia/ejercicios-5/ej-10-5.tex
@@ -84,7 +84,7 @@
                 El TCH nos \textit{aseguraba} una solución en el 
                 intervalo $[0, 630)$ \Tilde
 
-  \item \hacer
+        \item Quebrando se ve que es \textit{incompatible}. \red{DESARROLLAR}
 
-  \item \hacer
+        \item Quebrando se ve que es \textit{compatible}. \red{DESARROLLAR}
 \end{enumerate}
