--- a/6-guia/ejercicios-6/ej-6-6.tex
+++ b/6-guia/ejercicios-6/ej-6-6.tex
@@ -1,11 +1,15 @@
 \begin{enunciado}{\ejercicio}
-
-  \begin{enumerate}[label=\roman*)]
+  \begin{enumerate}[label=\alph*)]
     \item Determinar la formar binomial de
           $ \left(\frac{1 + \sqrt{3} i }{1 - i} \right)^{17}$.
 
     \item Determinar la forma binomial de
           $(-1 + \sqrt{3}i)^n$ para cada $n \en \naturales$.
   \end{enumerate}
-
 \end{enunciado}
+
+\begin{enumerate}[label=\alph*)]
+  \item  \hacer
+
+  \item \hacer
+\end{enumerate}
