--- a/6-guia/ejercicios-6/ej-9-6.tex
+++ b/6-guia/ejercicios-6/ej-9-6.tex
@@ -1,7 +1,6 @@
-\ejercicio
+\begin{enunciado}{\ejercicio}
 Hallar todos los $z \en \complejos$ tales que $3z^5 + 2|z|^5 + 32 = 0$
-
-\separadorCorto
+\end{enunciado}
 
 $3 z^5 + 2|z|^5 +32 = 0
 	\sii
