--- a/4-guia/ejercicios-4/ej-1-4.tex
+++ b/4-guia/ejercicios-4/ej-1-4.tex
@@ -120,3 +120,10 @@
           }
         $$
 \end{enumerate}
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+\end{aportes}
