--- a/7-guia/ejercicios-7/ej-4-7.tex
+++ b/7-guia/ejercicios-7/ej-4-7.tex
@@ -1,55 +1,53 @@
-\ejercicio
-\labelEjercicio{ej:cong} % Etiqueta para referenciar el ejercicio
+\begin{enunciado}{\ejercicio}
 
-Hallar el cociente y el resto de la división de $f$ por $g$ en los casos
+  \labelEjercicio{ej:cong} % Etiqueta para referenciar el ejercicio
+
+  Hallar el cociente y el resto de la división de $f$ por $g$ en los casos
+
+  \begin{enumerate}[label=\roman*)]
+    \item $f = 5X^4 + 2X^3 - X + 4$ y $g = X^2 + 2$ en $\racionales[X],\,\reales[X],\,\complejos[X]$,
+
+    \item $f = 4X^4 + X^3 - 4$ y $g = 2X^2 + 1$ en $\racionales[X],\,\reales[X],\,\complejos[X]$ y $(\enteros/7\enteros)[X]$,
+
+    \item\label{item}
+          $f = X^n - 1$ y $g = X - 1$ en $\racionales[X],\,\reales[X],\,\complejos[X]$ y $(\enteros/p\enteros)[X]$
+  \end{enumerate}
+
+\end{enunciado}
 
 \begin{enumerate}[label=\roman*)]
-	\item $f = 5X^4 + 2X^3 - X + 4$ y $g = X^2 + 2$ en $\racionales[X],\,\reales[X],\,\complejos[X]$,
+  \item \divPol{5X^4 + 2X^3 - X + 4}{X^2 + 2} \\
 
-	\item $f = 4X^4 + X^3 - 4$ y $g = 2X^2 + 1$ en $\racionales[X],\,\reales[X],\,\complejos[X]$ y $(\enteros/7\enteros)[X]$,
+        Resultado válido para $\racionales[X],\,\reales[X],\,\complejos[X]$
 
-	\item\label{item}
-	      $f = X^n - 1$ y $g = X - 1$ en $\racionales[X],\,\reales[X],\,\complejos[X]$ y $(\enteros/p\enteros)[X]$
-\end{enumerate}
+  \item \divPol{4X^4 + X^3 - 4}{2X^2 + 1} \\
 
+        Resultado válido para $\racionales[X],\,\reales[X],\,\complejos[X]$\\
+        En $\enteros/p\enteros\
+          \to
+          4X^4 + X^3 -4 = (2X^2 + 1) \cdot \ub{(2X^2 + 4X + 6)}{q[X]} + \ub{(3X + 4)}{r[X]}$
 
-\separadorCorto
+  \item Después de hacer un par iteraciones en la división asoma la idea de que:\\
+        $ X^n - 1 = (X-1) \cdot \ub{\sumatoria{j=0}{n-1} X^j}{q[X]} + \ub{0}{r[X]}$, \qquad\qquad{\tiny(que es la geométrica con $X \distinto 1$)}\\
+        \textit{Inducción: } Quiero probar que $p(n): X^n - 1 = (X-1) \cdot \sumatoria{j=0}{n-1} X^j  \ \paratodo n \en \naturales$\\
 
-\begin{enumerate}[label=\roman*)]
-	\item \divPol{5X^4 + 2X^3 - X + 4}{X^2 + 2} \\
+        \textit{Caso base: } $p(\magenta1):
+          X^{\magenta1} - 1 = (X - 1) \ub{\sumatoria{j=0}{\magenta1 - 1} X^j}{X^0 = 1}
+          \entonces
+          p(\magenta1)$ es Verdadero \Tilde\\
 
-	      Resultado válido para $\racionales[X],\,\reales[X],\,\complejos[X]$
+        \textit{Paso inductivo: }\\
+        $p(k): \ub{X^k - 1 = (X-1) \cdot \sumatoria{j=0}{k-1}X^j}{\green{HI}} \text{ es Verdadera}
+          \stackrel{?}\entonces
+          p(k+1): X^{k+1} - 1 = (X-1) \cdot \sumatoria{j=0}{k}X^j \text{ es Verdadera}$\\
 
-	\item \divPol{4X^4 + X^3 - 4}{2X^2 + 1} \\
+        $ (X-1) \cdot \sumatoria{j=0}{k} X^j =
+          (X-1) \cdot (\sumatoria{j=0}{\blue{k-1}} X^j + X^{\blue{k}} ) =
+          \ub{(X-1) \cdot \sumatoria{j=0}{k-1} X^j }{\green{HI}} + (X - 1) \cdot X^k =
+          \green{X^k - 1} + X^{k+1} - X^k = X^{k+1} - 1 \Tilde
+        $
 
-	      Resultado válido para $\racionales[X],\,\reales[X],\,\complejos[X]$\\
-	      En $\enteros/p\enteros\
-		      \to
-		      4X^4 + X^3 -4 = (2X^2 + 1) \cdot \ub{(2X^2 + 4X + 6)}{q[X]} + \ub{(3X + 4)}{r[X]}$
-
-	\item Después de hacer un par iteraciones en la división asoma la idea de que:\\
-      $ X^n - 1 = (X-1) \cdot \ub{\sumatoria{j=0}{n-1} X^j}{q[X]} + \ub{0}{r[X]}$, \qquad\qquad{\tiny(que es la geométrica con $X \distinto 1$)}\\
-	      \textit{Inducción: } Quiero probar que $p(n): X^n - 1 = (X-1) \cdot \sumatoria{j=0}{n-1} X^j  \ \paratodo n \en \naturales$\\
-
-	      \textit{Caso base: } $p(\magenta1):
-		      X^{\magenta1} - 1 = (X - 1) \ub{\sumatoria{j=0}{\magenta1 - 1} X^j}{X^0 = 1}
-		      \entonces
-		      p(\magenta1)$ es Verdadero \Tilde\\
-
-	      \textit{Paso inductivo: }\\
-	      $p(k): \ub{X^k - 1 = (X-1) \cdot \sumatoria{j=0}{k-1}X^j}{\green{HI}} \text{ es Verdadera}
-		      \stackrel{?}\entonces
-		      p(k+1): X^{k+1} - 1 = (X-1) \cdot \sumatoria{j=0}{k}X^j \text{ es Verdadera}$\\
-
-	      $ (X-1) \cdot \sumatoria{j=0}{k} X^j =
-              (X-1) \cdot (\sumatoria{j=0}{\blue{k-1}} X^j + X^{\blue{k}} ) =
-		      \ub{(X-1) \cdot \sumatoria{j=0}{k-1} X^j }{\green{HI}} + (X - 1) \cdot X^k =
-              \green{X^k - 1} + X^{k+1} - X^k = X^{k+1} - 1 \Tilde
-	      $
-
-          Dado que $p(1),\, p(k) $ y $p(k+1)$ resultaron verdaderas por el principio de inducción también
-          será verdadera $p(n) \paratodo n \en \naturales$
-
-
+        Dado que $p(1),\, p(k) $ y $p(k+1)$ resultaron verdaderas por el principio de inducción también
+        será verdadera $p(n) \paratodo n \en \naturales$
 
 \end{enumerate}
