--- a/macros/encabezado-pie.tex
+++ b/macros/encabezado-pie.tex
@@ -22,8 +22,7 @@
     \yellow{\FiveStar} al repo, críticas, todo sirve.}
 }    % pie izquierdo pares
 \fancyfoot[OL]{
-  \href{\dirTelegram}{\small\faIcon{telegram} ¿Errores? Mandá tu solución,
-    \textit{\underline{entendible y coqueta}}, así corregimos.
+  \href{\dirTelegram}{\small\faIcon{telegram} ¿Errores? Avisá así se corrige y ganamos todos.
   }
 } % pie izquierdo impares
 
