--- a/6-guia/ejercicios-6/ej-9-6.tex
+++ b/6-guia/ejercicios-6/ej-9-6.tex
@@ -26,7 +26,7 @@ $$
   \Sii{\red{!}}[$2k\pi$]
   \llave{l}{
     5 \theta = -5 \theta + \magenta{2k\pi} \\
-    \Sii{\red{!}}[$\llamada1$] \theta_k = \frac{1}{5}k\pi \text{ con } k \en [0,4]
+    \Sii{\red{!}}[$\llamada1$] \theta_k = \frac{1}{5}k\pi \text{ con } k \en \enteros
   }
 $$
 
@@ -47,9 +47,9 @@ $$
     }
   \end{array}
 $$
-Finalmente:
+Finalmente teniendo en cuenta que $k$ tiene que ser impar, y que el $\arg(z) \en [0, 2\pi)$:
 $$
-  z_k = 2 e^{\theta_k i} \quad \text{ con  $ \theta_k = \frac{1}{5}k\pi \ytext k \en [0,4]$}
+  z_k = 2 e^{\theta_k i} \quad \text{ con  $ \theta_k = \frac{1}{5}k\pi \ytext k \en \set{1,3,5,7,9}$}
 $$
 
 % Contribuciones
