extra 2-5 el infierno

--- a/macros/estructura-ejercicios.tex
+++ b/macros/estructura-ejercicios.tex
@@ -39,7 +39,7 @@
 % Ejercicios extras, parciales, etc.
 %=========================
 
-\subsubsection*{\hypertarget{extras-\guia}{{\Large\color{orange}{\faIcon{fire}}} Ejercicios extras:}}
+\subsubsection*{\hypertarget{extras-\guia}{{\Large\color{orange}{\faIcon{fire}}} Ejercicios de parciales:}}
 
 \foreach \x in {1,...,\cantidadEjerciciosExtras} { % cantidad de ejercicios extras
 		\IfFileExists{./ejercicios-\guia-extra/ej-extra-\x-\guia.tex}{
