--- a/macros/indice.tex
+++ b/macros/indice.tex
@@ -21,7 +21,7 @@
               }
           \end{multicols}
 
-    \item[\tiny\faIcon{angry}] Ejercicios Extras
+    \item[\tiny\faIcon{angry}] Ejercicios de Parciales
           \begin{multicols}{8}
             \foreach \extras in {1,...,\cantidadEjerciciosExtras}{
                 \refEjExtra{ejExtra:\extras}\\
