--- a/5-guia/ejercicios-5-extra/ej-extra-2-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-2-5.tex
@@ -1,198 +1,153 @@
-\ejExtra
+\begin{enunciado}{\ejExtra}
+  Sea $a \en \enteros$ tal que $(a^{197} - 26 : 15) = 1$. Hallar los posibles valores de
+  $(a^{97} - 36 : 135)$
+\end{enunciado}
 
-Sea $a \en \enteros$ tal que $(a^{197} - 26 : 15) = 1$. Hallar los posibles valores de
-$(a^{97} - 36 : 135)$\\
+Como $135 = 3^3 \cdot 5$, los posibles valores sin tener en cuenta la restricción que puede tomar el MCD serían:
+$$
+  \llamada1 \text{MCD} \en \set{1,3,5,15,9, 45, 27, 135}
+$$.
 
-\separadorCorto
-\underline{Nota: } No perder foco en que \textit{no} hay que encontrar "para que
-$a$ el mcd vale tanto", sino se pone más complicado en el final.\\
+Por otro lado tengo que:
+$$
+  15 = 3 \cdot 5 \ytext (a^{197} - 26 : 15) = 1,
+$$
+lo cual se cumple para:
+$$
+  \llamada2
+  \llave{l}{
+    \noCongruencia{a^{197} - 26}{0}{5}
+    \sii
+    \noCongruencia{a^{197}}{1}{5} \\
+    \noCongruencia{a^{197} - 26}{0}{3}
+    \sii
+    \noCongruencia{a^{197}}{2}{3}
+  }
+$$
 
-$(a^{97} - 36 : \ob{135}{3^3\cdot 5}) = 3^\alpha \cdot 5^\beta$ con
-$\llamada1 \llaves{l}{
-		0 \leq \alpha \leq 3\\
-		0 \leq \beta \leq 1\\
-	}$.\\
-Luego $(a^{197} - 26 : \ub{15}{3\cdot 5}) = 1$ se debe cumplir que:
-$
-	\llave{l}{
-		5 \noDivide a^{197} - 26\\
-		3 \noDivide a^{197} - 26
-	}
-$\\
+$$
+  \noCongruencia{a^{197}}{1}{5}
+  \Sii{5 es}[primo]
+  \llave{l}{
+    \Sii{$\noCongruencia{a}{0}{5}$}[PTF]
+    \noCongruencia{a}{1}{5} \\
+    \Sii{$\congruencia{a}{0}{5}$}
+    \noCongruencia{0}{1}{5}
+  }
+$$
+$$
+  \noCongruencia{a^{197}}{2}{3}
+  \Sii{3 es}[primo]
+  \llave{l}{
+    \Sii{$\noCongruencia{a}{0}{3}$}[PTF]
+    \noCongruencia{a}{2}{3} \\
+    %---
+    \Sii{$\congruencia{a}{0}{3}$}
+    \noCongruencia{0}{2}{3}
+  }
+$$
+Por lo tanto tengo que los \blue{valores permitido de $a$} para calcular los MCD son:
+$$
+  \begin{array}{c}
+    \noCongruencia{a^{197}}{1}{5} \sii \noCongruencia{a}{1}{5}
+    \llave{l}{
+    \blue{\congruencia{a}{0}{5}} \\
+    \blue{\congruencia{a}{2}{5}} \\
+    \blue{\congruencia{a}{3}{5}} \\
+      \blue{\congruencia{a}{4}{5}}
+    }
+    \vspace{5pt}
+    \\
+    \noCongruencia{a^{197}}{2}{3} \sii \noCongruencia{a}{2}{3}
+    \llave{l}{
+    \blue{\congruencia{a}{0}{3}} \\
+    \blue{\congruencia{a}{1}{3}} \\
+    }
+  \end{array}
+$$
+\bigskip
+\textit{Divisibilidad por 3. ¿Es la expresión $a^{97} - 36$ divisible por 3 para alguno de los valores de $a$ permitidos?}:
+$$
+  \congruencia{a^{97} - 36 }{0}{3}
+  \sii
+  \congruencia{a^{97}}{0}{3}
+  \Sii{3 es}[primo]
+  \llave{l}{
+    \Sii{\purple{$\noCongruencia{a}{0}{3}$}}[PTF]
+    \congruencia{a}{0}{3} \quad \text{incompatible con} \quad \purple{\noCongruencia{a}{0}{3}} \\
+    \Sii{\purple{$\congruencia{a}{0}{3}$}}
+    \congruencia{0}{0}{3} \quad \text{compatible con} \quad \purple{\congruencia{a}{0}{3}}
+    \ytext
+    \llaves{l}{
+      \blue{\congruencia{a}{0}{3}}\\
+      \blue{\congruencia{a}{0}{5}}
+    }
+  }
+$$
 
-\underline{\textit{Análisis de } $(a^{197} - 26 : 15) = 1$:}\\
-\textit{Estudio la divisibilidad $5$:}\\
+Se concluye que la expresión $a^{97} - 36$ es divisible por 3 para alguno de los valores de $a$ permitidos.\par \bigskip
 
-$ 5 \noDivide a^{197} - 26
-	\sisolosi
-	\noCongruencia{a^{197} - 26}{0}{5}
-	\sisolosi
-	\noCongruencia{a^{197} - 1}{0}{5}
-	\flecha{analizo casos}[$5\divideA a$ o $5\divideA a$]\\
-	\noCongruencia{a^{197}}{1}{5}
-	\sii
-	\llave{l}{
-		\text{(\magenta{rama $5\noDivide a$})}
-		\flecha{5 es primo}[$5\noDivide a$]
-		\noCongruencia{a\cdot(\ob{a^4}{\conga5 1})^{49}}{1}{5}
-		\sii
-		\noCongruencia{a}{1}{5} \Tilde\\
-		%---
-		\text{(\magenta{rama $5\divideA a$})}
-		\flecha{5 es primo}[$5\divideA a$]
-		\noCongruencia{0}{1}{5} \to \congruencia{a}{0}{5}
-	}
-$\\
+\textit{Divisibilidad por 5. ¿Es la expresión $a^{97} - 36$ divisible por 5 para alguno de los valores de $a$ permitidos?}:
+$$
+  \congruencia{a^{97} - 36 }{0}{5}
+  \sii
+  \congruencia{a^{97}}{1}{5}
+  \Sii{5 es}[primo]
+  \llave{l}{
+    \Sii{\purple{$\noCongruencia{a}{0}{5}$}}[PTF]
+    \congruencia{a}{1}{5}
+    \quad \text{incompatible con } \blue{\noCongruencia{a}{1}{5}} \\
+    \Sii{\purple{$\congruencia{a}{0}{5}$}}
+    \congruencia{0}{1}{3} \quad \text{incompatible}
+  }
+$$
+Se concluye que la expresión $a^{97} - 36$ no es divisible por 5 para los valores de $a$ permitidos. Esto reduce la cantidad de \textit{posibles} MCD a:
+$$
+  \text{MCD} \en \set{1,3,9,27}
+$$
 
-\textit{Conclusión divisilidad 5: }\\
-Para que
-\boxed{5 \noDivide a^{197} - 26
-	\sisolosi
-	\noCongruencia{a}{1}{5} \llamada2
-}\\
+\textit{\underline{Divisibilidad por 9}. ¿Es la expresión $a^{97} - 36$ divisible por 9 para alguno de los valores de $a$ permitidos?}:
+$$
+  \congruencia{a^{97} - 36 }{0}{9}
+  \sii
+  \congruencia{a^{97}}{0}{9}
+  \Sii{$\blue{a = 0}$}
+  \congruencia{0}{0}{9}
+$$
 
-\textit{Estudio la divisibilidad $3$:}\\
+Se concluye que la expresión $a^{97} - 36$ es divisible por 9 para alguno de los valores de $a$ permitidos. De esa manera descarta 
+que el 3 pueda ser MCD.\par \bigskip
 
-$ 3 \noDivide a^{197} - 26
-	\sisolosi
-	\noCongruencia{a^{197} - 2}{0}{3}
-	\sisolosi
-	\noCongruencia{a^{197} - 2}{0}{3}
-	\flecha{analizo casos}[$3\divideA a$ o $3\divideA a$]\\
-	\noCongruencia{a^{197}}{2}{3}
-	\sii
-	\llave{l}{
-		\text{(\magenta{rama $3\noDivide a$})}
-		\flecha{3 es primo}[$5\noDivide a$]
-		\noCongruencia{a\cdot(\ob{a^2}{\conga3 1})^{98}}{2}{3}
-		\sii
-		\noCongruencia{a}{2}{3} \Tilde\\
-		%---
-		\text{(\magenta{rama $3\divideA a$})}
-		\flecha{3 es primo}[$3\divideA a$]
-		\noCongruencia{0}{2}{3} \to \congruencia{a}{0}{3}
-	}
-$\\
+\textit{\underline{Divisibilidad por 27}. ¿Es la expresión $a^{97} - 36$ divisible por 27 para alguno de los valores de $a$ permitidos?}:
+$$
+  \congruencia{a^{97} - 36}{0}{27}
+  \sii
+  \congruencia{a^{97}}{9}{27}
+  \sii
+  \llave{l}{
+    \Sii{$\blue{\congruencia{a}{0}{3}}$}
+    \congruencia{0}{9}{27} \quad \text{noup!} \\
+    \Sii{$\blue{\congruencia{a}{1}{3}}$}
+    \congruencia{1}{9}{27} \quad \text{noup!}
+  }
+$$
 
-\textit{Conclusión divisilidad 3: }\\
-Para que
-\boxed{
-	3 \noDivide a^{197} - 26
-	\sisolosi
-	\noCongruencia{a}{2}{3}\llamada3
-}\\
+Se concluye que la expresión $a^{97} - 36$ no es divisible por 27 para ninguno de los valores de $a$ permitidos.\par \medskip
 
-\separadorCorto
-\underline{\textit{Análisis de } $(a^{97} - 36 : 135)$:}\\
-Necesito que
-$ \llaves{c}{
-		3 \divideA a^{97} - 36\\
-		\text{o bien,}\\
-		5 \divideA a^{97} - 36
-	}$, para obtener valores distintos de 1 para el MCD.
-\\
+\bigskip
 
-\textit{Estudio la divisibilidad $5$ (sujeto a $\llamada2$ y $\llamada3$):}\\
-Si
-$ 5 \divideA a^{97} - 36
-	\sisolosi
-	\congruencia{a^{97} - 1}{0}{5}
-	\sisolosi
-	\congruencia{a^{97}}{1}{5}
-	\flecha{analizo casos}[$5\divideA a$ o $5\divideA a$]\\
-	\congruencia{a^{97}}{1}{5}
-	\sii
-	\llave{l}{
-		\text{(\magenta{rama $5\noDivide a$})}
-		\flecha{5 es primo}[$5\noDivide a$]
-		\congruencia{a\cdot(\ob{a^4}{\conga5 1})^{24}}{1}{5}
-		\sii
-		\congruencia{a}{1}{5},\text{ absurdo con $\llamada2$} \skull\\
-		%---
-		\text{(\magenta{rama $5\divideA a$})}
-		\flecha{5 es primo}[$5\divideA a$]
-		\congruencia{0}{1}{3}
-		\to \text{ si } \congruencia{a}{0}{5}
-		\entonces
-		\noCongruencia{a^{97}}{1}{5}
-	}
-$
+Hasta el momento obtuvimos que $\set{9}$ es el único MCD posible. Falta analizar el caso del 1:
 
-\textit{Conclusión divisilidad 5: }\par
-\boxed{5 \noDivide a^{97} - 36\quad \paratodo a \en \enteros \to} el MCD no puede tener un 5 en su factorización. \\\
-
-
-\textit{Estudio la divisibilidad $3$ (sujeto a $\llamada2$ y $\llamada3$):}\par
-
-$ 3 \divideA a^{97} - 36
-	\sisolosi
-	\congruencia{a^{97}}{0}{3}
-	\sisolosi
-	\congruencia{a^{97}}{0}{3}
-	\flecha{analizo casos}[$3\divideA a$ o $3\divideA a$]\\
-	\congruencia{a^{97}}{0}{3}
-	\sii
-	\llave{l}{
-		\text{(\magenta{rama $3\noDivide a$})}
-		\flecha{3 es primo}[$3\noDivide a$]
-		\congruencia{a\cdot(\ob{a^2}{\conga5 1})^{48}}{0}{3}
-		\sii
-		\congruencia{a}{0}{3} \Tilde\\
-		%---
-		\text{(\magenta{rama $3\divideA a$})}
-		\flecha{3 es primo}[$3\divideA a$]
-		\congruencia{a}{0}{3}
-		\sii
-		\congruencia{0}{0}{3}
-		\to
-		\text{ si } \congruencia{a}{0}{3}
-		\entonces
-		\congruencia{a^{97}}{0}{3}
-	}
-$
-
-\textit{Conclusión divisilidad 3: }\par
-\boxed{3 \divideA a^{97} - 36
-	\sisolosi
-	\congruencia{a}{0}{3}
-\llamada4}
-
-De $\llamada1$ 3 es un posible MCD, tengo que ver si $3^2$ o $3^3$ también dividen.\\
-
-\textit{Estudio la divisibilidad $9$ en $a = 3k$ por $\llamada4$:}\par
-$ 9 \divideA (3k)^{97} - 36
-    \Sii{def}
-    \congruencia{(3k)^{97}}{0}{9}
-    \Sii{\red{!}}
-    \congruencia{3^2 \cdot 3^{95}\cdot k^{97}}{0}{9}
-    \sisolosi
-	\congruencia{0}{0}{9}\Tilde \paratodo k \en \enteros 
-$\\
-
-\textit{Conclusión divisilidad 9: }\\
-\boxed{ 9 \divideA a^{97} - 36 \text{ puede ser que } (a^{97} - 26:135) = 9 }\Tilde
-
-
-\textit{Estudio la divisibilidad $27$ en $a = 3k$ por $\llamada4$:}\\
-$ 27 \divideA (3k)^{97} - 36
-	\sisolosi
-    \congruencia{(3k)^{97}}{9}{27}
-    \Sii{\red{!}}
-    \congruencia{3^3 \cdot 3^{94} \cdot k^{97}}{9}{27}
-    \sisolosi
-    \congruencia{0}{9}{27} 
-$
-
-\textit{Conclusión divisilidad 27: }
-
-Si $\congruencia{a}{0}{3} \entonces 27 \noDivide a^{97} - 36$
-
-\magenta{Finalmente: el mcd es 9} 
+Encuentro que si:
+$$
+  a = 4 \entonces (-31:135) = 1
+$$
+y $a =4$ es un valor permitido por $\blue{\congruencia{a}{4}{5} }$ y $\blue{\congruencia{a}{1}{3} }$. Concluyendo así que el 1 es otro posible valor
 
 % Contribuciones
 \begin{aportes}
   %% iconos : \github, \instagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
   \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
-	\item \aporte{https://github.com/JowinTeran}{Ale Teran \github}
+  \item \aporte{https://github.com/JowinTeran}{Ale Teran \github}
 \end{aportes}
